on blog page, fixed blog card height on mobile

--- a/mobile.css
+++ b/mobile.css
@@ -170,7 +170,9 @@
   body {
     width: auto;
   }
-
+  .blog-card {
+    height: auto;
+  }
   .services-title {
     font-size: 32px;
     border: dashed 2px var(--btn-color);
